@@ -70,8 +70,8 @@ CLEANFILES = configmake.h configmake.h-t
 ## end configmake
 
 EXTRA_DIST = lookup3.c autogen.sh CHANGES  \
-	footer_no_timestamp.html libpopt.vers README-prereq\
-	$(TESTS) test-poptrc\
+	footer_no_timestamp.html libpopt.vers README-prereq \
+	$(TESTS) test-poptrc \
 	popt.xcodeproj/project.pbxproj \
 	popt.ps Doxyfile 	test3-data/01.answer \
 				test3-data/01.input \
@@ -120,7 +120,7 @@ usrlibdir = $(libdir)
 usrlib_LTLIBRARIES = libpopt.la
 
 libpopt_la_SOURCES = popt.c poptparse.c poptconfig.c popthelp.c poptint.c
-libpopt_la_LDFLAGS = -no-undefined @LTLIBINTL@ @LTLIBICONV@ $(AM_LDFLAGS)
+libpopt_la_LDFLAGS = -no-undefined $(AM_LDFLAGS)
 
 pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_DATA = popt.pc
